# IbdSel

./: .ccls  .dir-locals.el  .gitignore  .gitmodules  CMakeLists.txt  ClusterAlg.cc  EventReader.cc  LinkDef.h  MultCut.cc  MuonAlg.cc  MuonSaver.cc  README.md  SelectIBD.cc  SelectSingles.cc  TrigTypeCut.cc  ibd_main.cc  main.cc  requirements.txt  rootlogon.C  stage1_main.cc
common/: common.py
data/: matt_Li9_rates.txt
doc/: NOTES.org  check_results.org  cluster_notes.org  fit_prep.org  li9calc.org  muonalg_debug.org  timesync.org
doc/conda/: ibdsel1.txt  ibdsel1_pyls.txt  ibdsel1pp.txt  ibdsel3.txt
fit_prep/: InputFile.py  calc.py  config_file.py  delayed_eff.py  fit_prep.py  gen_dbd_livetime_files.py  get_ncap_spec.py  hardcoded.py  hist_gen.py  prompt_eff.py  replace_recalc.py  text_gen.py  util.py  vertex_eff.py
ibd_prod/: .dir-locals.el  .pylintrc  ibd_job.sl.sh  ibd_job_knl.main.sh  ibd_job_knl.sl.sh  ibd_job_knl_short.sl.sh  ibd_worker.py  ibd_worker_knl.py  knl_shutdown.py  prep_p17b.sh  reset.sh  submit.sh  submit_stage1.sh
ibd_prod/bash/: common_vars.inc.sh  do_submit_stage1.inc.sh  do_submit_stage1.sh  do_submit_stage2.inc.sh  ibd_job_knl.main.sh  job_env.inc.sh  job_init.inc.sh  maybe_srun.inc.sh  merge1_vars.inc.sh  set_vars.inc.sh  stage1_job.sh  stage1_vars.inc.sh  stage2_job.sh  stage2_vars.inc.sh  submit_utils.inc.sh
ibd_prod/bashlib/: job_env.inc.sh  job_init.inc.sh  maybe_srun.inc.sh  stage1_job.sh
ibd_prod/cling/: run_stage1.C  run_stage1_impl.C  run_stage2.C  run_stage2_impl.C
ibd_prod/examples/: submit_knl_long.sh  submit_knl_short.sh  submit_stage1_long.sh  submit_stage1_short.sh
ibd_prod/python/: .pylintrc  config_file.py  daily_runlist.py  dump_days.py  gen_configs.py  gen_dbd_runlist.py  hadd.py  merge1_worker.py  merge2_worker.py  prep_daily.py  prod_io.py  prod_util.py  queue_buffer.py  stage1_shutdown.py  stage1_worker.py  stage2_fbf_worker.py  stage2_worker.py  zmq_fan.py  zmq_shutdown.py
ibd_prod/python/old_haswell/: ibd_worker.py
ibd_prod/scripts/: clear.sh  filter_done.sh  prep_daily.py  prep_daily.sh  prep_merge1.sh  prep_p17b.sh  prep_stage1.sh  prep_stage2.sh  reset.sh  run_merge1.sh  submit_stage1.sh  submit_stage1_hsw.sh  submit_stage1_knl.sh  submit_stage2_hsw.sh  submit_stage2_knl.sh  submit_stage2_knl_1hour.sh
ibd_prod/slurm/: bbf.conf.disabled  create_BB.sl.sh  destroy_BB.sl.sh  ibd_job_knl.sl.sh  ibd_job_short.sl.sh  run_hsw.sl.sh  run_knl.sl.sh  stage1_hsw.sl.sh  stage1_knl.sl.sh
ibd_prod/slurm/old_haswell/: stage1_hsw.sl.sh
ibd_prod/tests/: ana_benchmark.py  ana_benchmark_stage1.py  benchmark_stage1.sh  benchmark_stage2.sh  lockfile_stress.py  submit_stage1_debug.sh  submit_stage1_hsw_debug.sh  submit_stage1_knl_debug.sh  submit_stage2_hsw_debug.sh  submit_stage2_knl_debug.sh
macro/: analysis-p19a.py  ibd_main.py  ibd_main_cpp.py  stage1_main.py  stage1_main_cpp.py
pylib/: converters.py  dagflow  load.py  ordered_yaml.py  stdvector.py
selector/: .gitignore  AdBuffer.cc  AdSaver.cc  AdTree.cc  CMakeLists.txt  CalcsTree.cc  Calculations.cc  Calculator.cc  ClusterAlg.cc  ClusterAlg.hh  ClusterSaver.cc  ClusterSaver.hh  ClusterTree.cc  ClusterTree.hh  Constants.cc  EventReader.cc  EventReader.hh  FlasherCut.cc  FlasherCut.hh  IbdTree.cc  Li9Calc.cc  LinkDef.h  LivetimeSaver.cc  LivetimeSaver.hh  Makefile  Misc.cc  MultCut.cc  MultCut.hh  MuonAlg.cc  MuonAlg.hh  MuonSaver.cc  MuonSaver.hh  MuonTree.cc  MuonTree.hh  Readers.cc  SelectIBD.cc  SelectIBD.hh  SelectSingles.cc  SelectSingles.hh  Selectors.cc  (+7 more)
selector/cling/: Build.C  LinkDef.h  LoadBoost.C
selector/common/: AdTree.cc  AdTree.hh  CMakeLists.txt  Constants.hh  Misc.cc  Misc.hh  MuonTree.cc  MuonTree.hh  common_deps.cc
selector/data/: p17b_livetimes.txt
selector/old/: ClusterSaver.cc  ClusterTree.cc  SelectorsOld.cc
selector/stage1/: AdSaver.cc  AdSaver.hh  CMakeLists.txt  EventReader.cc  EventReader.hh  FlasherCut.cc  FlasherCut.hh  LivetimeSaver.cc  LivetimeSaver.hh  MuonSaver.cc  MuonSaver.hh  TrigTypeCut.cc  TrigTypeCut.hh  stage1_exe.cpp  stage1_main.cc  stage1_main.hh
selector/stage2/: AdBuffer.cc  AdBuffer.hh  CMakeLists.txt  CalcsTree.cc  CalcsTree.hh  Calculator.cc  Calculator.hh  GapFinder.hh  IbdTree.cc  IbdTree.hh  Li9Calc.cc  Li9Calc.hh  MultCut.cc  MultCut.hh  MuonAlg.cc  MuonAlg.hh  NonUniCorr.cc  NonUniCorr.hh  ReCalc.cc  ReCalc.hh  Readers.cc  Readers.hh  Selectors.cc  Selectors.hh  SinglesCalc.cc  SinglesCalc.hh  VertexCut.cc  VertexCut.hh  recalc_exe.cc  recalc_exe.cpp  stage2_dubna.cc  stage2_dubna.hh  stage2_exe.cpp  stage2_globals.hh  stage2_ihep.cc  stage2_ihep.hh  stage2_main.cc  stage2_main.hh
selector/tests/: .pylintrc  FileFinder.cc  test.cfg  test_candidates.py  test_day.py  test_stage1.C  test_stage1.sh  test_stage1_impl.C  test_stage2.C  test_stage2.sh  test_stage2_impl.C
static/configs/: config.nominal.txt
static/li9_data/: matt_Li9_rates.txt  new_Li9_rates.txt
static/ncap_spec/: README.org  ncap_spec_P17B.root
static/nonuni/: non_uniformity_correction_maps.root
